// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertData/> test should render correctly for false alert 1`] = `
<div>
  <div
    class="AlertData-false-21"
  >
    false
  </div>
</div>
`;

exports[`<AlertData/> test should render correctly for true alert 1`] = `
<div>
  <div
    class="AlertData-true-18"
  >
    true
  </div>
</div>
`;

exports[`BasicDurationRenderer test should render correctly for non latency duration 1`] = `
<div>
  <span
    class="RenderValueWithUnits-value-17"
  >
    400 
  </span>
  <span
    class="RenderValueWithUnits-units-16"
  >
    ms
  </span>
</div>
`;

exports[`LatencyDurationRenderer test should render correctly for high latency 1`] = `
<div>
  <div
    class="GaugeData-high-13"
  >
    <span
      class="RenderValueWithUnits-value-15"
    >
      400 
    </span>
    <span
      class="RenderValueWithUnits-units-14"
    >
      ms
    </span>
  </div>
</div>
`;

exports[`LatencyDurationRenderer test should render correctly for low latency 1`] = `
<div>
  <div
    class="GaugeData-low-1"
  >
    <span
      class="RenderValueWithUnits-value-5"
    >
      20 
    </span>
    <span
      class="RenderValueWithUnits-units-4"
    >
      ms
    </span>
  </div>
</div>
`;

exports[`LatencyDurationRenderer test should render correctly for medium latency 1`] = `
<div>
  <div
    class="GaugeData-med-7"
  >
    <span
      class="RenderValueWithUnits-value-10"
    >
      250 
    </span>
    <span
      class="RenderValueWithUnits-units-9"
    >
      ms
    </span>
  </div>
</div>
`;
